--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.jarfar</groupId>
-	<artifactId>offer-generator</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>hello-offer-manager</artifactId>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
-	<name>Offer Generator</name>
-	<description></description>
+	<name>Hello Offer Manager</name>
+	<description>Simple example of Spring Boot + REST + React app.</description>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
